// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationDialogBox component should not render 1`] = `
<div>
  <span />
</div>
`;

exports[`NavigationDialogBox component should render 1`] = `
<div>
  <div>
    <span
      class="MuiBox-root css-0"
      data-testid="confirm-dialog-box"
    />
  </div>
</div>
`;
